[build-system]
requires = ["setuptools>=67", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "log-analyzer"
version = "0.1.0"
description = "CLI tool to analyze Squid proxy logs"
readme = "README.md"
requires-python = ">=3.11"

authors = [
  {name = "Your Name"}
]

dependencies = [
  "pydantic",
]

[project.scripts]
log-analyzer = "src.main:main"

[tool.setuptools.packages.find]
where = ["src"]